--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.4",
     "method-override": "~2.3.6",
     "morgan": "~1.6.1",
+    "normalize.css": "^4.2.0",
     "shortid": "^2.2.6"
   },
   "repository": {},
