--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "cloudant": "^1.4.2",
-    "connect-multiparty": "~2.0.0",
     "ejs": "~2.4.2",
     "errorhandler": "~1.4.3",
     "express": "~4.13.4",
     "method-override": "~2.3.6",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "normalize.css": "^4.2.0",
     "shortid": "^2.2.6"
   },
