--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "normalize.css": "^4.2.0",
-    "shortid": "^2.2.6"
+    "qs": "^6.2.1",
+    "shortid": "^2.2.6",
+    "watson-developer-cloud": "^1.12.4"
   },
   "repository": {},
   "engines": {
