--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "^1.14.2",
+    "body-parser": "^1.15.2",
     "cloudant": "^1.4.2",
     "ejs": "~2.4.2",
-    "errorhandler": "~1.4.3",
+    "errorhandler": "^1.4.3",
     "express": "~4.13.4",
-    "method-override": "~2.3.6",
-    "morgan": "~1.6.1",
+    "method-override": "^2.3.6",
+    "morgan": "^1.6.1",
     "multer": "^1.1.0",
     "normalize.css": "^4.2.0",
     "qs": "^6.2.1",
